# flyfun-apps

./: .gitattributes  .gitignore  Design.md  Dockerfile.base  README.md  STREAMING_MIGRATION_COMPLETED.md  UI_MIGRATION_PLAN.md  build.gradle.kts  docker-compose.yml  local.properties  pytest.ini  requirements.txt  run_langsmith_eval.py  settings.gradle.kts  test_streaming_manual.py
app/: .gitignore  Podfile  README.md  build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
data/: .gitignore  airports.db  rules.json  rules_definitions.xlsx
debug_shaders/: add.comp.cpp  add.comp.cpp.d  add_f16_f16_f16.spv  add_f16_f16_f16_rte.spv  add_f16_f16_f32.spv  add_f16_f16_f32_rte.spv  add_f16_f32_f16.spv  add_f16_f32_f16_rte.spv  add_f16_f32_f32.spv  add_f16_f32_f32_rte.spv  add_f32_f16_f16.spv  add_f32_f16_f16_rte.spv  add_f32_f16_f32.spv  add_f32_f16_f32_rte.spv  add_f32_f32_f16.spv  add_f32_f32_f16_rte.spv  add_f32_f32_f32.spv  add_f32_f32_f32_rte.spv  add_rms_f16_f16_f16.spv  add_rms_f16_f16_f16_rte.spv  add_rms_f16_f16_f32.spv  add_rms_f16_f16_f32_rte.spv  add_rms_f16_f32_f16.spv  add_rms_f16_f32_f16_rte.spv  add_rms_f16_f32_f32.spv  add_rms_f16_f32_f32_rte.spv  add_rms_f32_f16_f16.spv  add_rms_f32_f16_f16_rte.spv  add_rms_f32_f16_f32.spv  add_rms_f32_f16_f32_rte.spv  add_rms_f32_f32_f16.spv  add_rms_f32_f32_f16_rte.spv  add_rms_f32_f32_f32.spv  add_rms_f32_f32_f32_rte.spv
designs/: ARCHITECTURE_DECISIONS.md  CHATBOT_WEBUI_DESIGN.md  DOCKER_DEPLOYMENT.md  FILTERING_AND_STATE_REVIEW.md  GA_FRIENDLINESS_DESIGN.md  GA_FRIENDLINESS_IMPLEMENTATION.md  GA_FRIENDLINESS_MIGRATION_PLAN.md  GA_FRIENDLY_INTEGRATION_PLAN.md  IOS_APP_DESIGN.md  IOS_APP_IMPLEMENTATION.md  LLM_AGENT_DESIGN.md  LLM_AGENT_NEXT_PLAN.md  STATE_MANAGEMENT_ARCHITECTURE.md  UI_FILTER_STATE_DESIGN.md  auth_implementation_plan.md
docs/: user-guide.md
mcp_server/: .gitignore  Dockerfile  main.py  start_mcp.ksh  start_mcp.zsh
scripts/: test_extraction.py
shared/: README.md  airport_tools.py  rules_manager.py
tests/: conftest.py
tools/: .gitignore  aip.py  aipchange.py  (+3 more)
(+198 files in other folders)
